--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "js2lua",
-  "version": "0.1.5",
+  "version": "1.0.0",
   "description": "Convert javascript objects into lua table representation",
   "main": "index.js",
   "devDependencies": {
     "should": "~1.2.2"
   },
   "scripts": {
-    "test": "mocha -R spec test/"
+    "test": "mocha -R spec test/",
+    "test:watch": "mocha -R spec --watch --watch-files=lib/js2lua,test test/"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "content negotiation"
   ],
   "author": "Steven White <swhitewvu24@gmail.com>",
+  "forked_by": "Sinus <sinus@sinpi.net>",
   "license": "MIT",
   "readmeFilename": "README.md"
 }
